[gd_scene load_steps=2 format=3 uid="uid://beprng20aiv1i"]

[ext_resource type="Script" path="res://Scene/MapScene/map_scene_ui.gd" id="1_jnlps"]

[node name="MapSceneUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_jnlps")

[node name="MapContentContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_top = 192.0
offset_right = 192.0
offset_bottom = -92.0
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MapContentContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MapContentContainer/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MapContentContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContentLabel" type="Label" parent="MapContentContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 32
text = "content"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MapContentContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="WaitButton" type="Button" parent="MapContentContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "稍等"

[node name="SetOutButton" type="Button" parent="MapContentContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "出发"

[connection signal="pressed" from="MapContentContainer/MarginContainer/VBoxContainer/HBoxContainer/WaitButton" to="." method="_on_wait_button_pressed"]
[connection signal="pressed" from="MapContentContainer/MarginContainer/VBoxContainer/HBoxContainer/SetOutButton" to="." method="_on_set_out_button_pressed"]
